--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visualizador 3D de Copo</title>
+    <title>Mister Copo</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three/examples/js/loaders/GLTFLoader.js"></script>
 </head>
@@ -29,7 +29,7 @@
                 cup = gltf.scene;
                 scene.add(cup);
                 cup.position.y = -1;
-                camera.position.z = 3;
+                camera.position.z = 1;
                 animate();
             });
         }
