--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <script src="https://cdn.jsdelivr.net/npm/three/examples/js/loaders/GLTFLoader.js"></script>
 </head>
 <body>
+    <h1>Visualizador 3D de Copo - Mister Copo</h1>
+<p>Faça upload de uma textura para personalizar o copo.</p>
     <input type="file" id="textureInput" accept="image/*">
+    <div style="text-align: center; margin-top: 20px;">
+    <h1>Personalize seu Copo 3D</h1>
+    <p>Faça o upload de uma textura e veja o resultado em tempo real!</p>
+    <input type="file" id="textureInput" accept="image/*">
+</div>
     <canvas id="canvas"></canvas>
     
     <script>
