--- a/index.html
+++ b/index.html
@@ -3,26 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visualizador 3D de Copo</title>
+    <title>Personalizador de Copos 3D</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three/examples/js/loaders/GLTFLoader.js"></script>
+    <style>
+        body {
+            text-align: center;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            background-color: #f4f4f4;
+        }
+        #container {
+            margin-top: 20px;
+        }
+        canvas {
+            display: block;
+            margin: auto;
+            background: white;
+        }
+    </style>
 </head>
 <body>
-    <h1>Visualizador 3D de Copo - Mister Copo</h1>
-<p>Faça upload de uma textura para personalizar o copo.</p>
-    <input type="file" id="textureInput" accept="image/*">
-    <div style="text-align: center; margin-top: 20px;">
-    <h1>Personalize seu Copo 3D</h1>
-    <p>Faça o upload de uma textura e veja o resultado em tempo real!</p>
-    <input type="file" id="textureInput" accept="image/*">
-</div>
+    <div id="container">
+        <h1>Mister Copo</h1>
+        <p>Faça o upload de uma textura e veja o resultado aplicado ao copo em tempo real.</p>
+        <input type="file" id="textureInput" accept="image/*">
+    </div>
+
     <canvas id="canvas"></canvas>
-    
+
     <script>
         let scene, camera, renderer, cup;
-        let isDragging = false;
-        let lastMouseX = 0;
-        let rotationSpeed = 0.01; // Velocidade da rotação automática
 
         function init() {
             scene = new THREE.Scene();
@@ -39,40 +50,14 @@
                 cup = gltf.scene;
                 scene.add(cup);
                 cup.position.y = -1;
-                camera.position.z = 3;
+                cup.scale.set(1.5, 1.5, 1.5); // Aumenta o tamanho do copo
+                camera.position.z = 2.5; // Aproxima a câmera
                 animate();
-            });
-
-            // Zoom com Scroll do Mouse
-            window.addEventListener("wheel", function(event) {
-                camera.position.z += event.deltaY * 0.01;
-                camera.position.z = Math.max(1, Math.min(5, camera.position.z)); // Limita o zoom
-            });
-
-            // Eventos para detectar clique e arrastar
-            document.addEventListener("mousedown", function(event) {
-                isDragging = true;
-                lastMouseX = event.clientX;
-            });
-
-            document.addEventListener("mouseup", function() {
-                isDragging = false;
-            });
-
-            document.addEventListener("mousemove", function(event) {
-                if (isDragging && cup) {
-                    let deltaX = event.clientX - lastMouseX;
-                    cup.rotation.y += deltaX * 0.01; // Rotação manual ao arrastar o mouse
-                    lastMouseX = event.clientX;
-                }
             });
         }
 
         function animate() {
             requestAnimationFrame(animate);
-            if (!isDragging && cup) {
-                cup.rotation.y += rotationSpeed; // Rotação automática
-            }
             renderer.render(scene, camera);
         }
 
@@ -87,18 +72,4 @@
                             cup.traverse(function(child) {
                                 if (child.isMesh) {
                                     child.material.map = texture;
-                                    child.material.needsUpdate = true;
-                                }
-                            });
-                        }
-                    });
-                };
-                reader.readAsDataURL(file);
-            }
-        });
-
-        init();
-    </script>
-</body>
-</html>
-
+     
