--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             text-align: center;
             font-family: Arial, sans-serif;
             margin: 0;
-            background-color: #f4f4f4;
+            background-color: #000000;
         }
         #container {
             margin-top: 20px;
@@ -51,7 +51,7 @@
                 scene.add(cup);
                 cup.position.y = -1;
                 cup.scale.set(1.5, 1.5, 1.5); // Aumenta o tamanho do copo
-                camera.position.z = 2.5; // Aproxima a câmera
+                camera.position.z = 1; // Aproxima a câmera
                 animate();
             });
         }
