--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             text-align: center;
             font-family: Arial, sans-serif;
             margin: 0;
-            background-color: #000000;
+            background-color: #ed1313;
         }
         #container {
             margin-top: 20px;
@@ -26,7 +26,7 @@
 <body>
     <div id="container">
         <h1>Mister Copo</h1>
-        <p>Faça o upload de uma textura e veja o resultado aplicado ao copo em tempo real.</p>
+        <p>Faça o upload de uma textura desejada.</p>
         <input type="file" id="textureInput" accept="image/*">
     </div>
 
