--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             text-align: center;
             font-family: Arial, sans-serif;
             margin: 0;
-            background-color: #ed1313;
+            background-color: #03fcf4;
         }
         #container {
             margin-top: 20px;
@@ -19,7 +19,7 @@
         canvas {
             display: block;
             margin: auto;
-            background: white;
+            background: black;
         }
     </style>
 </head>
