--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </style>
 </head>
 <body>
-    <h1>Personalize seu Copo 3D</h1>
+    <h1>Mister Copo</h1>
     <p>Faça o upload de uma textura para aplicá-la ao copo.</p>
     <input type="file" id="textureInput" accept="image/*">
     <div id="container"></div>
