--- a/index.html
+++ b/index.html
@@ -8,70 +8,53 @@
     <script src="https://cdn.jsdelivr.net/npm/three/examples/js/loaders/GLTFLoader.js"></script>
     <style>
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: Arial, sans-serif;
             margin: 0;
+            display: flex;
+            height: 100vh;
+            overflow: hidden;
+            background-color: #222;
+            color: white;
+        }
+        #sidebar {
+            width: 300px;
+            background: #333;
+            padding: 20px;
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            background: linear-gradient(135deg, #f5f7fa, #c3cfe2);
-            color: #333;
-        }
-        h1 {
-            margin-top: 20px;
-            font-size: 2.5em;
-            color: #444;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
-        }
-        p {
-            font-size: 1.1em;
-            color: #555;
-            margin-bottom: 20px;
         }
         #container {
-            width: 90%;
-            max-width: 800px;
-            height: 60vh;
-            background-color: #fff;
-            border-radius: 15px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-            overflow: hidden;
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             position: relative;
         }
         canvas {
             display: block;
         }
+        h1 {
+            font-size: 20px;
+            text-align: center;
+        }
         input[type="file"] {
-            margin-top: 20px;
-            padding: 12px 20px;
-            border: none;
-            border-radius: 25px;
-            background-color: #6200ea;
+            margin-top: 10px;
+            padding: 8px;
+            background: #444;
             color: white;
-            font-size: 1em;
+            border: none;
             cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-        input[type="file"]:hover {
-            background-color: #3700b3;
-        }
-        input[type="file"]:focus {
-            outline: none;
-        }
-        .footer {
-            margin-top: 20px;
-            font-size: 0.9em;
-            color: #777;
         }
     </style>
 </head>
 <body>
-    <h1>Personalize seu Copo 3D</h1>
-    <p>Faça o upload de uma textura para aplicá-la ao copo.</p>
-    <input type="file" id="textureInput" accept="image/*">
+    <div id="sidebar">
+        <h1>Mister Copo</h1>
+        <p>Faça o upload de uma textura para aplicá-la ao copo.</p>
+        <input type="file" id="textureInput" accept="image/*">
+    </div>
     <div id="container"></div>
-    <div class="footer">Desenvolvido com ❤️ por você!</div>
 
     <script>
         let scene, camera, renderer, cup;
@@ -81,47 +64,33 @@
             scene = new THREE.Scene();
             camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
             renderer = new THREE.WebGLRenderer({ antialias: true });
-            renderer.setSize(window.innerWidth * 0.9, window.innerHeight * 0.6);
+            renderer.setSize(window.innerWidth - 300, window.innerHeight);
             document.getElementById('container').appendChild(renderer.domElement);
 
-            // Luz ambiente + Direcional para melhor iluminação
             const light = new THREE.HemisphereLight(0xffffff, 0x444444, 1);
             scene.add(light);
             const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
             directionalLight.position.set(5, 5, 5);
             scene.add(directionalLight);
 
-            // Carregar o modelo do copo
             const loader = new THREE.GLTFLoader();
             loader.load('copo.glb', function(gltf) {
                 cup = gltf.scene;
                 scene.add(cup);
-
-                // Ajustar a escala do copo
-                cup.scale.set(3, 3, 3);
-
-                // Centralizar o copo na cena
-                cup.position.set(0, -1, 0);
-
-                // Ajustar a posição da câmera para ficar mais próxima
-                camera.position.set(0, 0, 1.5);
-
-                // Focar a câmera no copo
-                camera.lookAt(cup.position);
-
+                cup.position.y = -1;
+                cup.scale.set(1.5, 1.5, 1.5);
+                camera.position.set(0, 0, 3);
                 animate();
             }, undefined, function(error) {
                 console.error("Erro ao carregar o modelo:", error);
             });
 
-            // Adicionar zoom com scroll do mouse
             window.addEventListener("wheel", function(event) {
                 let zoomSpeed = 0.1;
                 let newZ = camera.position.z + (event.deltaY * zoomSpeed * 0.1);
-                camera.position.z = Math.max(1, Math.min(3, newZ));
+                camera.position.z = Math.max(1.5, Math.min(4, newZ));
             });
 
-            // Rotação automática quando não estiver interagindo
             function rotateCup() {
                 if (cup && !controlsEnabled) {
                     cup.rotation.y += 0.005;
@@ -134,7 +103,6 @@
                 renderer.render(scene, camera);
             }
 
-            // Habilitar/desabilitar rotação automática ao interagir
             document.getElementById("container").addEventListener("mousedown", function() {
                 controlsEnabled = true;
             });
@@ -143,7 +111,6 @@
             });
         }
 
-        // Aplicar textura no copo
         document.getElementById('textureInput').addEventListener('change', function(event) {
             const file = event.target.files[0];
             if (file) {
