--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body>
     <div id="sidebar">
         <h1>Mister Copo</h1>
-        <p>Faça o upload de uma textura para aplicá-la ao copo.</p>
+        <p>Faça o upload de uma textura desejada.</p>
         <input type="file" id="textureInput" accept="image/*">
     </div>
     <div id="container"></div>
