--- a/index.html
+++ b/index.html
@@ -3,26 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personalizador de Copo 3D</title>
+    <title>Personalizador de Copo 3D | Mister Copo</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three/examples/js/loaders/GLTFLoader.js"></script>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap');
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Nunito', sans-serif;
             margin: 0;
             display: flex;
             height: 100vh;
             overflow: hidden;
-            background-color: #222;
-            color: white;
+            background-color: #F4F4F4;
+            color: #333;
         }
         #sidebar {
             width: 300px;
-            background: #333;
+            background: linear-gradient(180deg, #E63946, #F77F00);
             padding: 20px;
             display: flex;
             flex-direction: column;
             align-items: center;
+            color: white;
+            text-align: center;
+        }
+        #sidebar img {
+            width: 80%;
+            margin-bottom: 20px;
         }
         #container {
             flex: 1;
@@ -30,28 +37,38 @@
             justify-content: center;
             align-items: center;
             position: relative;
+            background-color: #FFF;
         }
         canvas {
             display: block;
         }
         h1 {
-            font-size: 20px;
-            text-align: center;
+            font-size: 22px;
+            margin-bottom: 10px;
+        }
+        p {
+            font-size: 14px;
         }
         input[type="file"] {
-            margin-top: 10px;
-            padding: 8px;
-            background: #444;
-            color: white;
+            margin-top: 15px;
+            padding: 10px;
+            background: #FFF;
+            color: #E63946;
             border: none;
             cursor: pointer;
+            font-weight: bold;
+            border-radius: 5px;
+        }
+        input[type="file"]:hover {
+            background: #FFD166;
         }
     </style>
 </head>
 <body>
     <div id="sidebar">
-        <h1>Personalizador de Copo 3D</h1>
-        <p>Faça o upload de uma textura para aplicá-la ao copo.</p>
+        <img src="logo.png" alt="Mister Copo Logo">
+        <h1>Mister Copo</h1>
+        <p>Faça o upload de uma textura e veja o resultado aplicado ao copo.</p>
         <input type="file" id="textureInput" accept="image/*">
     </div>
     <div id="container"></div>
