--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             border: none;
             cursor: pointer;
             font-weight: bold;
-            border-radius: 20px;
+            border-radius: 100px;
         }
         input[type="file"]:hover {
             background: #FFD166;
@@ -81,6 +81,10 @@
             scene = new THREE.Scene();
             camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
             renderer = new THREE.WebGLRenderer({ antialias: true });
+            scene = new THREE.Scene();
+            scene.background = new THREE.Color(0xffffff);
+            camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+            renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
             renderer.setSize(window.innerWidth - 300, window.innerHeight);
             document.getElementById('container').appendChild(renderer.domElement);
 
