--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div id="sidebar">
         <img src="logo.png" alt="Mister Copo Logo">
         <h1>Personalize seu Copo 3D</h1>
-        <p>Faça o upload de uma textura e veja o resultado aplicado ao copo.</p>
+        <p>Faça o upload de uma textura para aplicá-la ao copo.</p>
         <input type="file" id="textureInput" accept="image/*">
     </div>
     <div id="container"></div>
